[tool.poetry]
name = "btc-github-dl"
version = "0.1.0"
description = "Downloader for Bitcoin projects on GitHub"
authors = ["Andrew Chow <achow101-github@achow101.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
gitpython = "^3.1.11"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
